--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -105,7 +105,6 @@ body {
 .navbar_item {
   margin: 1%;
   padding-left: 3%;
- 
 }
 .sticky-top {
   position: sticky;
@@ -143,6 +142,7 @@ h4 {
   font-family: Montserrat, sans-serif;
   color: #fff;
   font-weight: 400;
+  margin-left: 0%;
 }
 
 .slider_container {
@@ -262,7 +262,6 @@ h4 {
   display: flex;
   overflow-x: scroll;
   position: relative;
- 
 }
 
 .slide:nth-of-type(even) {
@@ -275,7 +274,7 @@ h4 {
   align-items: center;
   flex-shrink: 0;
   width: 100%;
-  height: 312px;
+  height: 423px;
   scroll-snap-align: center;
   margin-right: 0px;
   box-sizing: border-box;
@@ -378,7 +377,6 @@ iframe[sandbox] .read-article {
   transition: 0.5s all ease-in-out;
 }
 
-
 .carouselslides {
   display: flex;
   overflow-x: scroll;
@@ -440,10 +438,10 @@ iframe[sandbox] .read-article {
   margin-left: 1032px;
 }
 
-.breadcrumb{
+.breadcrumb {
   background: #f8f8f8;
   padding: 11px 0;
-  margin-bottom: 45px
+  margin-bottom: 45px;
 }
 
 .py-3 {
@@ -453,5 +451,173 @@ iframe[sandbox] .read-article {
 }
 .bg-light {
   --bs-bg-opacity: 1;
-  /* background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important; */
+}
+
+.training-image {
+  height: 100%;
+  width: 100%;
+  object-fit: unset;
+
+  padding-right: 15px;
+  padding-left: 15px;
+  // margin-right: auto;
+  // margin-left: auto;
+  transition: 1s ease;
+}
+.traininglists {
+  margin-top: 40px;
+}
+.row {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(-1 * var(--bs-gutter-y));
+  margin-left: calc(0.5 * var(--bs-gutter-x));
+  margin-bottom: 92px;
+  margin-right: calc(0.5 * var(--bs-gutter-x));
+  row-gap: 33px;
+}
+
+.training-image img:hover {
+  border-radius: 50%;
+  transition: 1s ease;
+}
+
+//offerings....................................................
+.alice-carousel__stage-item {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+  white-space: normal;
+  line-height: 0;
+}
+
+//search bar in trainings list page
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body {
+  background: #f2f2f2;
+  font-family: "Open Sans", sans-serif;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00b4cc;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9dbfaf;
+}
+
+.searchTerm:focus {
+  color: #00b4cc;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 4px solid #00b4cc;
+  background: #00b4cc;
+  text-align: center;
+  color: rgb(85, 83, 83);
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+// @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body {
+  background: #f2f2f2;
+  font-family: "Open Sans", sans-serif;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  margin-bottom: 477px;
+  margin-left: 548px;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #617c80;
+  border-right: none;
+  padding: 5px;
+  height: 37px;
+  border-radius: 13px 0 0 13px;
+  outline: none;
+  color: #9dbfaf;
+  width: 230px;
+}
+
+.searchTerm:focus {
+  color: #00b4cc;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #989999;
+  background: hsl(180, 100%, 100%);
+  text-align: center;
+  color: rgb(76, 74, 74);
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap {
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+// Home slider.............................
+.sliderContainer{
+  display :flex;
+  flex-direction: row;
+
+}
+
+//Training banner
+
+.banner {
+  // background: #18649e;
+  min-height: 50vh;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: -1;
+}
+//training details
+.trainingdetails{
+  margin: 49px;
+}
+.thumbnail{
+  flex: 0 0 auto;
+  margin-left: 627px;
+  width: 25%;
 }
