--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -145,7 +145,7 @@ h1 {
 }
 h4 {
   font-family: Montserrat, sans-serif;
-  color: #fff;
+  color: rgb(0, 0, 0);
   font-weight: 400;
 }
 
@@ -471,4 +471,86 @@ iframe[sandbox] .read-article {
 {
   margin-left: 8%;
   margin-right: 1%;
+}
+
+.blog_container
+{
+  margin-left: 8%;
+}
+
+.tablinks
+{
+  padding: 1%;
+  border: white solid 0px;
+}
+
+.active {
+  color: black;
+}
+
+.inactive {
+  color: rgb(147, 147, 147);
+}
+
+.blog_container
+{
+  display: flex;
+  justify-content: space-between;
+}
+
+.category_list
+{
+  width: 30%;
+  text-transform: uppercase;
+  font-size: 95%;
+}
+
+.tab-container
+{
+  width: 70%;
+}
+
+.blog_img
+{
+  width: 100%;
+  object-fit: contain;
+}
+
+.quicklinks
+{
+  border: 0.8px solid rgb(199, 197, 197);
+  margin: 1%;
+  padding : 2%;
+  color: rgb(112, 110, 110);
+  margin-top: 2%;
+  text-transform: uppercase;
+  font-size: 90%;
+}
+
+.head
+{
+  margin-bottom: 8%;
+}
+
+.tab-section
+{
+  font-size: 140%;
+  margin-bottom: 4%;
+}
+
+.tablinks
+{
+  text-transform: uppercase;
+}
+
+.category
+{
+  margin-left: 4%;
+  margin-top: 2%;
+  color: #393939;
+}
+
+.blog_detail
+{
+  font-size: 120%;
 }
