--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,6 @@
+@import "react-alice-carousel/lib/scss/alice-carousel.scss";
+
+
 * {
   padding: 0%;
   margin: 0%;
@@ -113,7 +116,7 @@ body {
   font-size: 70%;
   float: right;
   margin-right: 2%;
-  padding-top: 0.5%;
+  // padding-top: 0.5%;
   color: rgb(255, 109, 56);
 }
 
@@ -450,7 +453,7 @@ iframe[sandbox] .read-article {
 }
 
 .py-3 {
-  padding-top: 1rem !important;
+  // padding-top: 1rem !important;
   background-color: white;
   /* padding-bottom: 1rem !important; */
 }
@@ -797,7 +800,7 @@ h5.heading span{
   .status {
       padding-left: 10px;
       font-size: 16px;
-      padding-top: 6px;
+      // padding-top: 6px;
       text-transform: capitalize;
       color: #d66349;
   }
@@ -1019,7 +1022,7 @@ body {
   font-size: 70%;
   float: right;
   margin-right: 2%;
-  padding-top: 0.5%;
+  // padding-top: 0.5%;
   color: rgb(255, 109, 56);
 }
 
@@ -1029,7 +1032,7 @@ body {
 ol,
 ul {
   padding-left: 46rem;
-  padding-top: 1rem;
+  // padding-top: 1rem;
 }
 ol,
 ul,
@@ -1044,11 +1047,7 @@ dl {
 h1 {
   margin: 6%;
 }
-h4 {
-  font-family: Montserrat, sans-serif;
-  color: rgb(0, 0, 0);
-  font-weight: 400;
-}
+
 
 .slider_container {
   background-color: rgb(234, 234, 234);
@@ -1352,7 +1351,7 @@ iframe[sandbox] .read-article {
 }
 
 .py-3 {
-  padding-top: 1rem !important;
+  // padding-top: 1rem !important;
   background-color: white;
   /* padding-bottom: 1rem !important; */
 }
