--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -458,9 +458,11 @@ iframe[sandbox] .read-article {
   background-color: white;
   /* padding-bottom: 1rem !important; */
 }
+
 .bg-light {
   --bs-bg-opacity: 1;
 }
+
 
 .training-image {
   height: 100%;
@@ -1356,6 +1358,7 @@ iframe[sandbox] .read-article {
   background-color: white;
   /* padding-bottom: 1rem !important; */
 }
+
 .bg-light {
   --bs-bg-opacity: 1;
   /* background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important; */
@@ -1511,18 +1514,76 @@ iframe[sandbox] .read-article {
   height: auto;
 }
 
-// .fa-angle-left, .fa-angle-right
-// {
-//   font-size: 50px;
-// }
+.home_page_slider_testmonial
+{
+  margin-left: 10%;
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
 
-// // .carouselslider {
-// //   // position: absolute;
-// //   top: 50%;
-// //   z-index: 10;
-// //   display: flex;
-// //   justify-content: space-between;
-// //   max-width: 100%;
-// //   min-width: 98%;
-// //   margin: 0 1%;
-// // }
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.testimonial-container {
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+
+.testimonial-modal-image img {
+  width: 30px;
+  height: auto;
+}
+
+.navbar-light
+{
+  background-color: white;
+}
+
+.testimonial-body
+{
+  margin-left: 3%;
+  margin-right: 2%;
+}
+
+.read_more
+{
+  color: white;
+  background-color: #000;
+  padding:1%;
+}
+
+.close-button-section
+{
+  float: right;
+}
+
+.ReactModal__Overlay
+{
+  background-color: #000 !important;
+  z-index: 15;
+}
+
+.testimonial-modal-image
+{
+  align-items: center;
+  justify-content: center;
+  padding-left: 40%;
+}
+
+.testimonial-modal-image img
+{
+  height: 200px;
+  width: 150px;
+}
+
+.ReactModal__Content 
+{
+  max-width: 90%;
+}
