--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -454,7 +454,7 @@ iframe[sandbox] .read-article {
 }
 
 .py-3 {
-  // padding-top: 1rem !important;
+  padding-top: 0rem !important;
   background-color: white;
   /* padding-bottom: 1rem !important; */
 }
@@ -1024,11 +1024,7 @@ body {
 .contact {
   color: rgb(41, 41, 41);
 }
-ol,
-ul {
-  padding-left: 46rem;
-  // padding-top: 1rem;
-}
+
 ol,
 ul,
 dl {
@@ -1347,13 +1343,16 @@ iframe[sandbox] .read-article {
   background-color: white;
   /* padding-bottom: 1rem !important; */
 }
-.bg-light {
-  --bs-bg-opacity: 1;
-  /* background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important; */
-
-  .navbar-brand {
-    display: block;
-  }
+// .bg-light {
+//   // --bs-bg-opacity: 1;
+//   /* background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important; */
+//   background-color: white;
+//   .navbar-brand {
+//     display: block;
+//   }
+// }
+.navbar-light{
+  background-color: white !important;
 }
 
 .about_container {
@@ -1523,4 +1522,17 @@ iframe[sandbox] .read-article {
   flex-direction: row;
   justify-content: space-between;
   margin-right: 26px;
+}
+
+.alice-carousel__stage-item {
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  margin-top: -20px;
+  box-sizing: border-box;
+  width: 100%;
+  height: 104%;
+  vertical-align: top;
+  white-space: normal;
+  line-height: 0;
 }
