--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -563,7 +563,7 @@ body {
   position: relative;
   display: flex;
   margin-bottom: 477px;
-  margin-left: 1106px;
+  justify-content: flex-end;
 }
 
 .searchTerm {
